[FIX] Prevent background previews from overflowing if too big

--- a/pandora-client-web/src/components/chatroomAdmin/chatroomAdmin.scss
+++ b/pandora-client-web/src/components/chatroomAdmin/chatroomAdmin.scss
@@ -140,8 +140,9 @@
 			}
 
 			.preview {
-				flex: 1;
 				@include center-flex;
+				flex: 1;
+				overflow: hidden;
 
 				img {
 					max-width: 100%;
